# MeTTa-Compiler

./: .gitignore  Cargo.toml
benches/: set_operations.rs
benches/e2e/: e2e.rs  e2e_throughput.rs  e2e_throughput_configurable.rs
benches/metta_samples/: backward_chaining.metta
docs/: BUILTIN_FUNCTIONS_IMPLEMENTATION.md
examples/: README.md  args_example.metta  collapse_superpose_example.metta  expression_ops.metta  import_args.metta  import_example.metta  knowledge_base.metta  list_ops.metta  list_ops_fixed.metta  math_lib.metta  max_atom_example.metta  remove_atom_example.metta  resolution_prover_example.metta  select_example.metta  set_operations.metta  size_atom_example.metta  spaces.metta  test_assertions.metta  test_car_cdr_atom.metta  test_case.metta  test_equality.metta  test_spaces.metta  test_trace.metta  unicode_math.metta
exp/superposition/: substitutions.metta  terms.metta  test_terms.metta  test_unify.metta  unification.metta
src/: config.rs  lib.rs  main.rs  pathmap_par_integration.rs  rholang_integration.rs  tree_sitter_parser.rs
src/backend/: environment.rs  fuzzy_match.rs  mork_convert.rs
src/backend/eval/: bindings.rs  builtin.rs  control_flow.rs  expression.rs  io.rs  list_ops.rs  macros.rs  mod.rs  resolution_builtins.rs  resolution_critical.rs  set.rs  space.rs  testing.rs  types.rs
src/backend/models/: metta_value.rs
tests/: mettatron_binary.rs  tree_sitter_corpus.rs
tests/common/: output_parser.rs
tree-sitter-metta/: grammar.js
tree-sitter-metta/src/: grammar.json  node-types.json  parser.c
tree-sitter-metta/test/corpus/: operators.metta  real_world.metta
